--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "pg": "^7.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
